- Minor UI fixes

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 /*-------------------------------*/
 
 #wrapper {
+		margin-bottom: 90px;
     padding-left: 0;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
